# other/controllers/Book.js
@@ -3,19 +3,6 @@
 var utils = require('../utils/writer.js');
 var Book = require('../service/BookService');
 
-module.exports.authorReviewPOST = function authorReviewPOST (req, res, next) {
-  var id = req.swagger.params['id'].value;
-  var userID = req.swagger.params['userID'].value;
-  var body = req.swagger.params['body'].value;
-  Book.authorReviewPOST(id,userID,body)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
-
 module.exports.bookGET = function bookGET (req, res, next) {
   var offset = req.swagger.params['offset'].value;
   var limit = req.swagger.params['limit'].value;
@@ -76,6 +63,29 @@ module.exports.bookPOST = function bookPOST (req, res, next) {
 module.exports.bookRelatedGET = function bookRelatedGET (req, res, next) {
   var id = req.swagger.params['id'].value;
   Book.bookRelatedGET(id)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
+module.exports.bookReviewDELETE = function bookReviewDELETE (req, res, next) {
+  var id = req.swagger.params['id'].value;
+  var reviewID = req.swagger.params['reviewID'].value;
+  Book.bookReviewDELETE(id,reviewID)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
+module.exports.bookReviewGET = function bookReviewGET (req, res, next) {
+  var id = req.swagger.params['id'].value;
+  Book.bookReviewGET(id)
     .then(function (response) {
       utils.writeJson(res, response);
     })
