# other/controllers/Event.js
@@ -13,6 +13,17 @@ module.exports.eventGET = function eventGET (req, res, next) {
     });
 };
 
+module.exports.eventIdDELETE = function eventIdDELETE (req, res, next) {
+  var id = req.swagger.params['id'].value;
+  Event.eventIdDELETE(id)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
 module.exports.eventIdGET = function eventIdGET (req, res, next) {
   var id = req.swagger.params['id'].value;
   Event.eventIdGET(id)
